--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <title>Expensify</title>
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <link rel="stylesheet" type="text/css" href="dist/styles.css" />
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    
   </head>
   <body>
     <div id="app"></div>
